# gegelati-tetris

./: .gitignore  CMakeLists.txt  README.md  params.json
src/: Render.cpp  Render.h  Tetris.cpp  Tetris.h  instructions.cpp  instructions.h  main.cpp  mainInference.cpp  tetris_game.cpp
